--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         <div class="row my-2">
             <div class="col">
                 Ford: <img id="ford" src="images/ford.png" alt="blue car" width="32" height="32">
-                <button class="btn btn-outline-success btn-sm" type="button" id="fordGass">+</button>
-                <button class="btn btn-outline-danger btn-sm" type="button" id="fordBrems">-</button>
+                <button class="btn btn-outline-success btn-sm" type="button" id="fordGo">+</button>
+                <button class="btn btn-outline-danger btn-sm" type="button" id="fordBrake">-</button>
             </div>
             
         </div>
         <div class="row my-2">
             <div class="col">
-                Chevrolet: <img id="chevrolet" src="images/chevrolet.png" alt="blue car" width="32" height="32">
-                <button class="btn btn-outline-success btn-sm" type="button" id="chevroletGass">+</button>
-                <button class="btn btn-outline-danger btn-sm" type="button" id="chevroletBrems">-</button>
+                Chevrolet: <img id="chevrolet" src="images/chevrolet.png" alt="red car" width="32" height="32">
+                <button class="btn btn-outline-success btn-sm" type="button" id="chevroletGo">+</button>
+                <button class="btn btn-outline-danger btn-sm" type="button" id="chevroletBrake">-</button>
             </div>
         </div>
         <div class="row my-2">
             <div class="col">
-                Saab: <img id="saab" src="images/saab.png" alt="blue car" width="32" height="32">
-                <button class="btn btn-outline-success btn-sm" type="button" id="saabGass">+</button>
-                <button class="btn btn-outline-danger btn-sm" type="button" id="saabBrems">-</button>
+                Saab: <img id="saab" src="images/saab.png" alt="green car" width="32" height="32">
+                <button class="btn btn-outline-success btn-sm" type="button" id="saabGo">+</button>
+                <button class="btn btn-outline-danger btn-sm" type="button" id="saabBrake">-</button>
             </div>
         </div>
     </div>
@@ -89,12 +89,10 @@
         }
         go(){
             this.x+=10;
+            console.log(this.x);
         }
         brake(){
-            this.getPosition-=10;
-        }
-        getPosition(){
-            console.log("X:"+this.x+" Y:"+this.y);
+            this.x-=10;
         }
         draw(){
             ctx.drawImage(this.image, this.x, this.y);
@@ -109,15 +107,44 @@
 
     let ford = new Car(Ford, 'blue', 10, 10, 0);
     let chevrolet = new Car(Chevrolet, 'red', 10, 10, 50);
-    let saab = new Car(Saab, 'green', 10, 10,100)
+    let saab = new Car(Saab, 'green', 10, 10, 100)
 
     let gameboard= new Gameboard(600,150);
     gameboard.start();
 
-    let fordGass = document.getElementById('fordGass');
 
-    fordGass.onclick = () => {
+    document.getElementById('fordGo').onclick = () => {
         ford.go();
+        gameboard.clear();
+        drawCars();
+    }
+
+    document.getElementById('fordBrake').onclick = () => {
+        ford.brake();
+        gameboard.clear();
+        drawCars();
+    }
+
+    document.getElementById('chevroletGo').onclick = () => {
+        chevrolet.go();
+        gameboard.clear();
+        drawCars();
+    }
+
+    document.getElementById('chevroletBrake').onclick = () => {
+        chevrolet.brake();
+        gameboard.clear();
+        drawCars();
+    }
+
+    document.getElementById('saabGo').onclick = () => {
+        saab.go();
+        gameboard.clear();
+        drawCars();
+    }
+
+    document.getElementById('saabBrake').onclick = () => {
+        saab.brake();
         gameboard.clear();
         drawCars();
     }
